# EpanechnikovDenseAM

./: .gitignore  BSTOR_big_mnist_store.py  LMIN0_utils.py  PXLE_pixel_emergence.py  PXLE_utils.py  QBVAE1_training.py  QBVAE2_semantic_eval.py  QBVAE3_latent_mem_retrieval.py  QBVAE_utils.py  README.md  data_utils.py  demo_2d_epa_plotting.ipynb  distributions.py  eval_1d2d.py  eval_LMIN0.py  eval_LOGL0.py  eval_LOGL0_poster.py  exp_AKEM_all_kernel_emergence.py  exp_LMIN0.py  exp_LOGL0.py  jax_utils.py  launch_LMIN0.py  launch_LOGL0 copy.py  main.py  memories.py  path_fixes.py  pyproject.toml  test_jax_torch.py  utils.py
