[project]
name = "LSRDAM"
version = "0.1.0"
description = "Emergent Memories in Dense Associative Memory with Epanechnikov Energy"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.2.0",
    "diffusers>=0.35.2",
    "einops>=0.8.1",
    "equinox>=0.11.10",
    "fastcore>=1.8.9",
    "fasttransform>=0.0.2",
    "h5py>=3.14.0",
    "ipympl>=0.9.8",
    "ipywidgets>=8.1.7",
    "jax[cuda12]>=0.4.30",
    "jaxtyping>=0.2.36",
    "loguru>=0.7.3",
    "matplotlib>=3.9.4",
    "numpy<2.0",
    "optax>=0.2.4",
    "pandas>=2.3.3",
    "peft>=0.17.1",
    "polars>=1.34.0",
    "pydantic>=2.12.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "transformers>=4.57.1",
    "tyro>=0.9.35",
    "wandb>=0.22.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
